Feature: Implemented incomes page with add and delete functionality